[build-system]
requires = [
    "setuptools",
    "cython>=0.25",
    "murmurhash>=0.28.0,<1.1.0",
    "cymem>=2.0.2,<2.1.0",
    "preshed>=3.0.2,<3.1.0",
    "blis>=0.4.0,<0.8.0",
    "numpy==1.15.4; python_version<='3.6'",
    "numpy==1.16.5; python_version=='3.7'",
    "numpy==1.17.3; python_version=='3.8'",
    "numpy==1.19.4; python_version=='3.9'",
    # do not pin numpy on future versions of python to avoid incompatible numpy
    # and python versions
    "numpy; python_version>='3.10'",
]
build-backend = "setuptools.build_meta"
